--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fuse.js": "^3.2.0",
     "lodash": "^4.17.10",
+    "uid": "0.0.2",
     "vue": "^2.5.11"
   },
   "browserslist": [
